[gd_scene load_steps=3 format=3 uid="uid://cjf8aj0g7neny"]

[ext_resource type="Script" path="res://src/map/cell/cell.gd" id="1_yelak"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vp7p"]
size = Vector2(120, 120)

[node name="Cell" type="Node2D"]
script = ExtResource("1_yelak")

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource("RectangleShape2D_1vp7p")

[node name="AllyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllyDetector"]
shape = SubResource("RectangleShape2D_1vp7p")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.407843, 0.329412, 1)
theme_override_font_sizes/font_size = 50
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="EnemyDetector" to="." method="_on_enemy_detector_area_entered"]
[connection signal="area_entered" from="AllyDetector" to="." method="_on_ally_detector_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
